--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -2,5 +2,10 @@
     "weddingDate": "15 juni 2024",
     "inviteButton": "Inbjudan",
     "helloWorld": "Hej världen!",
-    "chooseLanguage": "Välj språk"
+    "chooseLanguage": "Välj språk",
+    "accommodation": "Boende",
+    "transport": "Transport",
+    "guestList": "Gästlista",
+    "registry": "Önskelista",
+    "rsvp": "OSA"
 }
