--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,7 +2,7 @@
     "weddingDate": "June 15th, 2024",
     "inviteButton": "Invitation",
     "helloWorld": "Hello World!",
-    "chooseLanguage": "Choose language",
+    "chooseLanguage": "EN",
     "accommodation": "Accommodation",
     "transport": "Transport",
     "guestList": "Guest list",
