--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -2,7 +2,7 @@
     "weddingDate": "15 juni 2024",
     "inviteButton": "Inbjudan",
     "helloWorld": "Hej världen!",
-    "chooseLanguage": "Välj språk",
+    "chooseLanguage": "SV",
     "accommodation": "Boende",
     "transport": "Transport",
     "guestList": "Gästlista",
